--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-big-calendar": "^1.8.1",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
     "react-scheduler": "^0.1.0",
