--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_SERVICE_API = "https://apieglise.loginsmart-cd.com/api/"
+REACT_APP_SERVICE_API = "http://localhost:5000/api/"
+REACT_APP_SERVICE_APIAA = "https://apieglise.loginsmart-cd.com/api/"
